[metadata]
name = tistory-cli
version = attr: tistory.__version__
description = The simplest command line tool for Tistory, the Korean blogging platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgkim5360/tistory-cli-python
author = Don Kim
author_email = dgkimdev@gmail.com
keywords = Command Line Tool, Tistory, Markdown, blogging

[options]
packages = tistory, tistory.oauth2
setup_requires = pytest-runner
install_requires =
  secretstorage >= 3.0.0
  mistune >= 0.8.3
tests_require = pytest

[options.entry_points]
console_scripts =
  tistory = tistory.main:main

[aliases]
test = pytest
